Support MRN parameter
